# Templates

./: main.py  templates.json
CppTemplate/: .clang-format  CMakeLists.txt  CppInspection.xml
CppTemplate/docs/: CMakeLists.txt  Doxyfile.in
CppTemplate/ext/: CMakeLists.txt
